<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_on_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_weight="0.1"
            android:text="@string/bluetooth"/>

        <Button
            android:id="@+id/bt_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/on"/>

        <Button
            android:id="@+id/bt_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/off"/>
    </LinearLayout>

    <TextView
        android:id="@+id/paired_devices_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@+id/ll_on_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/paired_devices"/>

    <ListView
        android:id="@+id/paired_listview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/paired_devices_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paired_listview">
        <Button
            android:id="@+id/scan_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/scan_bluetooth_available" />
        <Button
            android:id="@+id/discoverable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/discoverable" />
    </LinearLayout>


    <TextView
        android:id="@+id/available_devices_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/ll_scan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/available_devices"/>

    <ListView
        android:id="@+id/available_listview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/available_devices_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:id="@+id/chat_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/available_listview">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="listen"
            android:layout_weight="0.5"
            android:id="@+id/listen"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="Not Conncted"/>

    </LinearLayout>

    <ListView
        android:id="@+id/message_listview"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@+id/chat_control"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll_chat_box"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/ll_chat_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        app:cardCornerRadius="50dp"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/message_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:hint="message"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:textColorHint="@color/black" />
            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/send"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:roundPercent="50"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:src="@drawable/baseline_send_24"
                android:text="Send"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>